--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
 
-html, body {
-    height: 100%;
+body, html {
     margin: 0;
+    padding: 0;
+    height: 100%;
     font-family: 'Share Tech Mono', monospace;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: black;
-    color: #00ff00;
+    background: white; /* Set background to white */
+    color: black; /* Set text color to black for contrast */
 }
 
 #vanta-bg {
@@ -17,31 +15,78 @@ html, body {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: -1;
 }
 
 #overlay {
-    position: relative;
-    z-index: 2;
-    text-align: center;
-    padding: 20px;
-    width: 100%;
-    max-width: 600px;
-    margin: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
+    padding: 20px;
+    text-align: center;
 }
 
-#logo-container, #logo-container a {
-    cursor: pointer;
-    display: inline-block; /* This ensures the anchor doesn't change the layout */
+#logo-container {
+    margin-bottom: 20px;
 }
 
 #club-logo {
     max-width: 300px;
+}
+
+#welcome-message {
+    margin-bottom: 20px;
+    transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+#program-details {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+#program-details.active {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+button {
+    margin: 10px 0;
+    cursor: pointer;
+    color: white;
+    background: #045034;
+    border: none;
+    padding: 10px 20px;
+    font-family: 'Share Tech Mono', monospace;
+    font-size: 1em;
+    transition: background 0.3s ease;
+}
+
+button:hover {
+    background: #109963;
+}
+
+.centered {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.sport-selection {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    margin: 20px 0;
+}
+
+.sport-selection label {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    border: 1px solid #045034;
+    cursor: pointer;
 }
 
 #content-container {
@@ -258,21 +303,6 @@ h1 {
 
 .checkout-step.active {
     display: block;
-}
-
-.sport-selection {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
-    margin: 20px 0;
-}
-
-.sport-selection label {
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    border: 1px solid #00ff00;
-    cursor: pointer;
 }
 
 #card-element {
