--- a/program.css
+++ b/program.css
@@ -221,7 +221,7 @@ button:hover {
     border-radius: 4px;
 }
 
-.add-parent-button {
+.add-parent-button, .remove-parent-button {
     width: 30px;
     height: 30px;
     border-radius: 50%;
@@ -255,4 +255,26 @@ button:hover {
 .location-options, .day-options {
     margin-left: 20px;
     margin-bottom: 15px;
+}
+
+.navigation-buttons {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+    gap: 20px;
+}
+
+.navigation-buttons button {
+    flex: 1;
+    max-width: 200px;
+    background: #045034;
+    color: white;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
+
+.navigation-buttons button:hover {
+    background: #067a4d;
 } 
