--- a/styles.css
+++ b/styles.css
@@ -412,5 +412,9 @@ html {
 }
 #vanta-bg {
     position: fixed !important;
+    top: 0 !important;
+    left: 0 !important;
+    width: 100% !important;
+    height: 100% !important;
     z-index: 0 !important;
 }
